2 Local Kubernetes/minimal.yaml
# 1. Import the nginx ingress controller
# `kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.5.1/deploy/static/provider/cloud/deploy.yaml`

# 2. Apply yaml files
# `kubectl apply -f .`

# 3. Modify /etc/hosts to add `alinefinancial.com` to localhost.

# 4. pages should be accessible at 
# `alinefinancial.com

# 5. Remove pods when done
# `kubectl delete -f .`
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-deployment
  labels:
    app: landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
      - name: landing
        image: lyndasm/aline-landing
        ports:
          - containerPort: 4200
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: landing-service
  labels:
    app: landing
spec:
  type: LoadBalancer
  selector:
    app: landing
  ports:
  - port: 80
    targetPort: 4200
    name: http
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: alinefinancial.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: landing-service
                port:
                  number: 80
          # - path: /landing
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: landing-service
          #       port:
          #         number: 80
          # - path: /member
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: member-service
          #       port:
          #         number: 80

# I can port-forward landing-deployment... 4200:80 and view the site on my localhost.
# http://127.0.0.1:4200/ but alinelanding.com is giving me a bad gateway
